[package]
name = "vinegar"
version = "0.1.0"
description = "An example generated using the event-driven-async template"
authors = ["nai4205 <naijonkorn@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream", "serde"] }
futures = "0.3.31"
ratatui = { version = "0.29.0", features = ["serde"] }
tokio = { version = "1.46.1", features = ["full"] }
color-eyre = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
